--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,15 @@
     android:background="@color/colorGrey"
     tools:context=".MainActivity">
 
+
+
    <ListView
        android:id="@+id/listview_championship"
        android:background="@color/colorWhite"
-       android:layout_width="wrap_content"
+       android:layout_width="match_parent"
        android:layout_height="wrap_content"
+       android:dividerHeight="10dp"
+       android:divider="@color/colorGrey"
        android:layout_margin="10dp"/>
 
 </LinearLayout>
