--- a/app/src/main/res/layout/activity_detail_driver.xml
+++ b/app/src/main/res/layout/activity_detail_driver.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,12 +7,19 @@
     android:background="@color/colorGrey"
     android:orientation="vertical"
     tools:context=".DetailDriver">
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
     <ImageView
+        android:layout_marginTop="10dp"
+        android:layout_marginRight="50dp"
+        android:layout_marginLeft="50dp"
+        android:layout_marginBottom="5dp"
         android:id="@+id/imageView"
         android:layout_width="match_parent"
         android:layout_height="236dp"
-        app:srcCompat="@drawable/ic_launcher_background" />
+        app:srcCompat="@drawable/default_picture" />
 
     <TextView
         android:id="@+id/driver"
@@ -63,4 +70,5 @@
         android:text="TextView"
         android:textColor="@color/colorFont"
         android:textSize="17dp" />
-</LinearLayout>
+    </LinearLayout>
+</ScrollView>
