--- a/app/src/main/res/layout/activity_detail_track.xml
+++ b/app/src/main/res/layout/activity_detail_track.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/colorGrey"
     android:orientation="vertical"
-    tools:context=".DeatailTrack">
+    tools:context=".DetailTrack">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -35,7 +35,7 @@
 
 
         <TextView
-            android:id="@+id/circuitCountry"
+            android:id="@+id/circuitLocality"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
@@ -48,16 +48,19 @@
             android:textSize="17dp" />
 
         <TextView
-            android:id="@+id/circuitLocality"
+            android:id="@+id/latlong"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="10dp"
+            android:backgroundTint="@color/colorWhite"
             android:background="@drawable/rounded_corner"
             android:fontFamily="@font/driverconstructor"
             android:padding="5sp"
             android:text="TextView"
             android:textColor="@color/colorFont"
             android:textSize="17dp" />
+
+
 
 
     </LinearLayout>
