--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/colorGrey"
     tools:context=".MainActivity">
-
-   <ListView
-       android:id="@+id/listview_championship"
-       android:background="@color/colorWhite"
+   <FrameLayout
+       android:id="@+id/fragment_container"
+       android:layout_width="match_parent"
+       android:layout_height="match_parent"
+       android:layout_above="@id/bottom_navigation"/>
+   <com.google.android.material.bottomnavigation.BottomNavigationView
+       android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
-       android:dividerHeight="10dp"
-       android:divider="@color/colorGrey"
-       android:layout_margin="10dp"/>
-
-</LinearLayout>
+       android:layout_alignParentBottom="true"
+       app:menu="@menu/bottom_navigation"
+       android:background="?android:attr/windowBackground"/>
+</RelativeLayout>
