--- a/app/src/main/res/layout/fragment_lastrace.xml
+++ b/app/src/main/res/layout/fragment_lastrace.xml
@@ -7,7 +7,7 @@ android:background="@color/colorGrey"
 
 
 <ListView
-    android:id="@+id/listview"
+    android:id="@+id/listview_lastrace"
     android:background="@color/colorWhite"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
