--- a/app/src/main/res/layout/fragment_team.xml
+++ b/app/src/main/res/layout/fragment_team.xml
@@ -7,7 +7,7 @@
 
 
     <ListView
-        android:id="@+id/listview"
+        android:id="@+id/listview_team"
         android:background="@color/colorWhite"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
