--- a/app/src/main/res/layout/activity_past_champion_ship.xml
+++ b/app/src/main/res/layout/activity_past_champion_ship.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorGrey"
-    tools:context=".PastChampionShipActivity">
+    tools:context=".Activitys.PastChampionshipActivity">
 
     <Spinner
         android:id="@+id/spinner"
