--- a/app/src/main/res/layout/activity_track.xml
+++ b/app/src/main/res/layout/activity_track.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:background="@color/colorGrey"
-    tools:context=".TrackActivity">
+    tools:context=".Activitys.TrackActivity">
 
     <ListView
         android:id="@+id/listview_track"
